fixed an issue with overflow on the body

--- a/feo.scss
+++ b/feo.scss
@@ -7,7 +7,6 @@
 html,
 body {
   min-width: var(--size-0);
-  overflow: hidden;
   color: var(--black);
   font-family: var(--sans-serif);
   background-color: var(--white);
